--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/madler/zlib.git
 [submodule "deps/openssl"]
 	path = deps/openssl
-	url = git://git.openssl.org/openssl.git
+	url = https://github.com/openssl/openssl.git
